# moneymatch

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_wallet_ledger.py  0003_linking.py  0004_h2h_play.py  0005_pools_tournaments.py  0006_social.py  0007_admin_ops.py  0008_kyc_status.py  0009_risk_flag_kinds.py  0010_soft_unbind.py
apps/api/src/moneymatch_api/: __init__.py  auth.py  caps.py  config.py  constants.py  dependencies.py  errors.py  logging.py  main.py  middleware.py  security.py
apps/api/src/moneymatch_api/adapters/: __init__.py  base.py  chess_lichess.py  (+3 more)
apps/api/tests/: conftest.py  factories.py  test_adapter_registry.py  test_admin_audit_service.py  test_admin_authz.py  test_admin_contests.py  test_admin_flags.py  test_admin_ops_views.py  test_admin_users.py  test_analytics.py  test_auth.py  test_caps.py  test_challenge_service.py  test_challenges_endpoints.py  test_chaos_resilience.py  test_chess_lichess_adapter.py  test_config.py  test_cs2_faceit_adapter.py  test_dev_e2e_auth.py  test_dota2_opendota_adapter.py  test_fairness.py  test_friends_endpoints.py  test_friends_service.py  test_geo_service.py  test_health.py  test_host_clients.py  test_idor_matrix.py  test_in_process_worker.py  test_kyc_policy.py  test_leaderboard.py  test_limits_service.py  test_linking_models.py  test_links_endpoints.py  test_markets.py  test_match_lifecycle.py  test_match_states.py  test_matchmaking.py  test_metric_models_service.py  test_money_math.py  test_nightly.py  (+19 more)
(+280 files in other folders)
