[project]
name = "moneymatch-api"
version = "0.0.0"
description = "MoneyMatch API — server-authoritative skill-wagering backend."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "greenlet>=3.1",
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.4",
    "pyjwt[crypto]>=2.9",
    "sentry-sdk[fastapi]>=2.16",
    "posthog>=7.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "aiosqlite>=0.20",
    "ruff>=0.6.9",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moneymatch_api"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: FastAPI's `Depends()` in defaults is the idiomatic pattern.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# One event loop for the whole session so the module-global async engine (and its
# asyncpg pool) is never used across loops.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
